--- a/summaries_from_txt.ipynb
+++ b/summaries_from_txt.ipynb
@@ -2,227 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get text and format it    \n",
     "\n",
     "\n",
-    "with open('data/Appel avec Nicolas CASTET-20241030_103642-Transcription de la réunion-txt.txt', encoding=\"latin-1\") as f:\n",
+    "with open('<file_path>.txt', encoding=\"latin-1\") as f:\n",
     "    transcript = f.readlines()\n",
     "    transcript"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"conversations\": [\n",
-      "    {\n",
-      "      \"conversationItems\": [\n",
-      "        {\n",
-      "          \"text\": \"OK alors normalement c'est bon.\",\n",
-      "          \"id\": \"1\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"La transcription, c'est à dire que c'est l'enregistrement.\",\n",
-      "          \"id\": \"2\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Oui, enfin l'enregistrement.\",\n",
-      "          \"id\": \"3\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Écrit et pas vidéo ?\",\n",
-      "          \"id\": \"4\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ah oui.\",\n",
-      "          \"id\": \"5\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Donc il faut bien articuler pour qu'il comprenne.\",\n",
-      "          \"id\": \"6\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Mais franchement ça va, hein ?\",\n",
-      "          \"id\": \"7\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Il comprend super bien et il écrit super vite.\",\n",
-      "          \"id\": \"8\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ah, tu le vois en direct et je peux le voir moi aussi, non ?\",\n",
-      "          \"id\": \"9\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Oui, tu vois pas toi ?\",\n",
-      "          \"id\": \"10\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ben non.\",\n",
-      "          \"id\": \"11\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"J'ai l'information comme quoi la transcription a démarré mais je vois pas.\",\n",
-      "          \"id\": \"12\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Par contre y a un truc que je comprends pas, je peux alors sur cette réunion là j'ai pu commencer la la transcription, mais je peux pas enregistrer la vidéo, je comprends pas.\",\n",
-      "          \"id\": \"13\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Oh.\",\n",
-      "          \"id\": \"14\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Et sur l'autre truc ?\",\n",
-      "          \"id\": \"15\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ben Ouais, ça dépend de de notre abonnement Microsoft je pense non ?\",\n",
-      "          \"id\": \"16\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"L'autre réunion, j'ai.\",\n",
-      "          \"id\": \"17\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Mais non, parce que sur l'autre réunion, j'ai pu, enfin sur la réunion d'équipe, j'ai pu enregistrer la vidéo, mais pas faire la transcription.\",\n",
-      "          \"id\": \"18\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Attends, je peux afficher la transcription ?\",\n",
-      "          \"id\": \"19\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ouais ouais, je veux afficher la transcription, ouais d'accord ouais, Ça fait, ça fait beaucoup de blabla du coup hein ?\",\n",
-      "          \"id\": \"20\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Rien.\",\n",
-      "          \"id\": \"21\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ben oui, mais après justement, on on avec le logiciel là que Remi nous avait dit on pourra faire un petit résumé en enlevant tous ces blablas là comme ça qui servent à rien.\",\n",
-      "          \"id\": \"22\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"OK.\",\n",
-      "          \"id\": \"23\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Et après ce transcript, il est il est SAUVEGARDE, c'est à dire que on peut retourner sur la réunion, sur la vidéo et et relire le transcript si on a un doute sur ce qui a été discuté et décidé.\",\n",
-      "          \"id\": \"24\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Alors ?\",\n",
-      "          \"id\": \"25\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ouais.\",\n",
-      "          \"id\": \"26\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Oui.\",\n",
-      "          \"id\": \"27\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Et c'est et c'est SAUVEGARDE combien de temps ?\",\n",
-      "          \"id\": \"28\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"120 jours.\",\n",
-      "          \"id\": \"29\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"OK, c'est intéressant.\",\n",
-      "          \"id\": \"30\",\n",
-      "          \"role\": \"Nicolas CASTET\",\n",
-      "          \"participantId\": \"Nicolas_CASTET\"\n",
-      "        },\n",
-      "        {\n",
-      "          \"text\": \"Ouais.\",\n",
-      "          \"id\": \"31\",\n",
-      "          \"role\": \"Elodie Jaubert\",\n",
-      "          \"participantId\": \"Elodie_Jaubert\"\n",
-      "        }\n",
-      "      ],\n",
-      "      \"modality\": \"text\",\n",
-      "      \"id\": \"conversation1\",\n",
-      "      \"language\": \"fr\"\n",
-      "    }\n",
-      "  ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# format in json to feed azure api\n",
     "\n",
@@ -264,22 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Issue task status: succeeded\n",
-      "issue: Le client a des problèmes pour enregistrer la vidéo d'une réunion d'équipe. Il a pu commencer la transcription, mais pas la vidéo.\n",
-      "\n",
-      "Resolution task status: succeeded\n",
-      "resolution: L'agent a confirmé que la transcription a été enregistrée en direct et qu'il peut être afficher. L'agent n'a pas encore fourni de solution ou de diagnostic. Le client a mentionné qu'il a pu enregistrer la vidéo d'une réunion, mais pas la transcription. L'agent et le client ont discuté de la saveur de la transcription, qui est supprimée avec le logiciel de leur ami Remi.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
